# home

./: AGENTS.md  BATTERY_PROPOSAL.md  README.md  TODO.md  config_flow.py
apps/: .gitignore  Makefile  pyproject.toml
apps/bindicator/: __init__.py
components/bindicator/: pyproject.toml
components/bindicator/bindicator/: __init__.py  bindicator.py  config_flow.py  const.py  manifest.json  wastecalendar.py
deployment/: .gitignore  config.yaml  op-client.py  pyproject.toml
deployment/files/: configuration.yaml  energy_cost_forecast.yaml  energy_cost_saving_tracker.yaml  http.yaml  waste_collection_schedule.yaml
deployment/files/alerts/: .rsync-filter
deployment/files/automations/: .rsync-filter  appliance_energy_sensor_areas.yaml  bindicator.yaml  car_battery.yaml  closet_light.yaml  covers_day.yaml  covers_solar_close.yaml  covers_solar_open.yaml  covers_sunset.yaml  covers_wake.yaml  dishwasher_done_notification.yaml  family_room_lamp.yaml  family_room_lamp_button.yaml  family_room_lamp_button_double.yaml  family_room_lamp_mode_bindicator.yaml  garage_light_off.yaml  (+14 more)
deployment/filter_plugins/: slugify.py
deployment/group_vars/: homeassistant.yaml
deployment/inventories/: local.yaml
deployment/inventory/: local.yaml
deployment/playbooks/: apps.yaml  config.yaml
deployment/templates/: family_room_lamp_button.yaml.j2  family_room_lamp_button_double.yaml.j2  octopus_energy_electricity_current_export.yaml.j2  octopus_energy_electricity_export_current_accumulative_consumption.yaml.j2  zha.yaml.j2
deployment/tests/: test_car_battery_automation.py
(+154 files in other folders)
