[project]
name = "home-deployment-tests"
version = "0.1.0"
requires-python = ">=3.11"

description = "Deployment-level tests for Home Assistant config"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
  "pytest>=8.0.2",
  "pytest-homeassistant-custom-component>=0.13.109",
  "PyYAML>=6.0.1",
]
